--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.7.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
