--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
     "recharts": "^2.7.2",
+    "redux-persist": "^6.0.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
